--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
+    "start": "nodemon index",
+    "server": "fuser -k 5001/tcp && nodemon server"
   },
   "author": "yugal and aashish",
   "license": "ISC",
