--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "redis": "^3.1.2",
     "socket.io": "^4.1.2"
   }
 }
