--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
+    "dev":"nodemon index.js",
     "server": "fuser -k 5001/tcp && nodemon server"
   },
   "author": "yugal",
