--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev":"nodemon index.js",
+    "dev": "nodemon index.js",
     "server": "fuser -k 5001/tcp && nodemon server"
   },
   "author": "yugal",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -27,7 +28,8 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "redis": "^3.1.2",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "web-push": "^3.4.5"
   },
   "repository": {
     "type": "git",
@@ -37,6 +39,5 @@
     "url": "https://github.com/yugal109/school-backend/issues"
   },
   "homepage": "https://github.com/yugal109/school-backend#readme",
-  "devDependencies": {},
   "description": ""
 }
